--- a/src/main/resources/org/example/scdproj/mainFxml.fxml
+++ b/src/main/resources/org/example/scdproj/mainFxml.fxml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Button?>
-<VBox xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml">
-   <Label text="Hello, FXML!" />
-   <Button text="Click Me" onAction="#handleButtonClick" />
+
+<VBox xmlns="http://javafx.com/javafx"
+      xmlns:fx="http://javafx.com/fxml"
+      fx:controller="org.example.scdproj.Controller">
+   <Button text="Click Me" onAction="#handleButtonClick"/>
 </VBox>
