--- a/src/main/resources/UILayer/VBoxes/useCaseDiagramVBox.fxml
+++ b/src/main/resources/UILayer/VBoxes/useCaseDiagramVBox.fxml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" style="-fx-background-color: #4d4d4d;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="BusinessLayer.VBoxControllers.UsecaseDiagramVBoxController">
+<VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" style="-fx-background-color: #4d4d4d;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="BusinessLayer.OtherControllers.UsecaseDiagramController">
    <children>
       <Label fx:id="model_name" text="Usecase Diagram: My Usecase Diagram" textFill="WHITE">
          <font>
@@ -19,38 +19,39 @@
             <Label text="Tools" textFill="WHITE" />
             <HBox prefHeight="28.0" prefWidth="101.0">
                <children>
-                  <ToggleButton fx:id="usecase_toggle_btn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#usecase_func" text="Usecase" HBox.hgrow="ALWAYS" />
+                  <Button fx:id="usecase_btn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#usecaseFunc" text="Usecase" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
             <HBox>
                <children>
-                  <ToggleButton fx:id="actor_toggle_btn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#actor_func" text="Actor" HBox.hgrow="ALWAYS" />
+                  <Button fx:id="actor_btn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#actorFunc" text="Actor" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
             <HBox layoutX="10.0" layoutY="28.0" prefHeight="28.0" prefWidth="101.0">
                <children>
-                  <ToggleButton fx:id="association_toggle_btn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#association_func" text="Association" HBox.hgrow="ALWAYS" />
+                  <Button fx:id="association_btn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#associationFunc" text="Association" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
-            <HBox layoutX="10.0" layoutY="56.0" prefHeight="28.0" prefWidth="101.0" />
-            <HBox layoutX="10.0" layoutY="84.0" prefHeight="28.0" prefWidth="101.0" />
-            <HBox layoutX="10.0" layoutY="112.0" prefHeight="28.0" prefWidth="101.0" />
+            <HBox layoutX="10.0" layoutY="93.0" prefHeight="28.0" prefWidth="101.0">
+               <children>
+                  <Button fx:id="include_btn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#includeFunc" text="Include" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
+            <HBox layoutX="10.0" layoutY="124.0" prefHeight="28.0" prefWidth="101.0">
+               <children>
+                  <Button fx:id="extend_btn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#extendFunc" text="Extend" HBox.hgrow="ALWAYS" />
+               </children>
+            </HBox>
          </children>
       </VBox>
       <VBox layoutX="20.0" layoutY="47.0" prefHeight="200.0" prefWidth="100.0" spacing="5.0">
          <children>
             <Label text="Annotations" textFill="WHITE" />
-            <HBox prefHeight="21.0" prefWidth="101.0">
-               <children>
-                  <ToggleButton fx:id="text_toggle_btn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#text_func" text="Text" HBox.hgrow="ALWAYS" />
-               </children>
-            </HBox>
             <HBox>
                <children>
-                  <ToggleButton fx:id="textbox_toggle_btn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#textbox_func" text="TextBox" HBox.hgrow="ALWAYS" />
+                  <Button fx:id="textBox_btn" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#textBoxFunc" text="TextBox" HBox.hgrow="ALWAYS" />
                </children>
             </HBox>
-            <HBox layoutX="10.0" layoutY="28.0" prefHeight="28.0" prefWidth="101.0" />
          </children>
       </VBox>
    </children>
